Feature/landscape mode improvements&bug fixes (#48)
* feat: enhance verse highlighting logic and improve tooltip display

* feat: implement filtered highlights and auto-highlights in ChapterPage and ChapterReader components

* fix: update splash icon

* fix: adjust maxHeight for AutoHighlightTooltip and VerseMateTooltip components

* fix: update login prompt text from "Sign up" to "Sign in" for verse saving

* fix: update toast positioning for split view and modify clipboard copy behavior in tooltips

* feat: enhance authentication modals with controlled state and layout adjustments for sign in and sign up

* feat: implement landscape mode improvements for SimpleColorPickerModal and integrate modal usage in BibleInteractionContext

* fix: refactor highlight logic in ChapterReader to simplify trailing space background color handling

* fix: simplify delete confirmation message in VerseMateTooltip component

* fix: update button labels and styles for AutoHighlightTooltip and VerseMateTooltip components

* fix: adjust modal alignment and width for tablet portrait mode in BibleNavigationModal

* feat: Add interactive verse tooltips and enhance verse parsing

- Implemented pressable verses in TopicText component to trigger tooltips.
- Created TopicVerseTooltip component for displaying verse insights with actions (copy, share).
- Added BibleBooks constants for managing book metadata.
- Enhanced verse parsing to support clickable references for better interaction.
- Introduced utility functions for parsing and formatting verse references.

* fix: update navigation method to use setParams for smoother chapter transitions

* feat: integrate ToastProvider into topic detail tests for improved notification handling

* feat: implement magnetic snap functionality in SplitView for improved drag experience

* change icon name

* modify splash

* feat: update AutoHighlightTooltip and VerseMateTooltip to always start expanded for improved user experience

* feat: consolidate navigati

--- a/eas.json
+++ b/eas.json
@@ -32,8 +32,8 @@
         "buildConfiguration": "Release"
       },
       "android": {
-        "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "buildType": "app-bundle",
+        "gradleCommand": ":app:bundleRelease"
       },
       "env": {
         "APP_ENV": "preview",
