feat: add permissions and blocked permissions for Android

--- a/app.json
+++ b/app.json
@@ -23,6 +23,12 @@
     },
     "android": {
       "package": "org.versemate.app",
+      "permissions": [
+        "RECEIVE_BOOT_COMPLETED"
+      ],
+      "blockedPermissions": [
+        "android.permission.ACTIVITY_RECOGNITION"
+      ],
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon.png",
