--- a/eas.json
+++ b/eas.json
@@ -70,6 +70,9 @@
   },
   "submit": {
     "preview": {
+      "android": {
+        "releaseStatus": "draft"
+      },
       "ios": {
         "ascAppId": "6754565256"
       }
