fix: update bundle identifier and package name to match app branding

--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "newArchEnabled": true,
     "ios": {
       "icon": "./assets/images/ios-icon.png",
-      "bundleIdentifier": "org.versemate.mobile",
+      "bundleIdentifier": "org.versemate.app",
       "supportsTablet": true,
       "associatedDomains": [
         "applinks:app.versemate.org",
@@ -22,7 +22,13 @@
       }
     },
     "android": {
-      "package": "org.versemate.mobile",
+      "package": "org.versemate.app",
+      "permissions": [
+        "RECEIVE_BOOT_COMPLETED"
+      ],
+      "blockedPermissions": [
+        "android.permission.ACTIVITY_RECOGNITION"
+      ],
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon.png",
