feat(api): update client configuration for local development and enhance SDK with support conversation endpoints
- Changed base URL in client configuration to point to local development server.
- Added new API methods for managing support conversations, including:
  - `getSupportConversations`
  - `postSupportConversations`
  - `getSupportConversationsByIdMessages`
  - `postSupportConversationsByIdMessages`
- Introduced types for support conversation data and errors in types.gen.ts.
- Implemented delete account functionality with appropriate error handling.
- Enhanced URL generation functions for chapter and topic sharing to include optional insight types.
- Added new types for insight bookmarks and bookmark groups in bible.ts.

--- a/app.json
+++ b/app.json
@@ -18,7 +18,14 @@
         "applinks:app.versemate.org"
       ],
       "infoPlist": {
-        "ITSAppUsesNonExemptEncryption": false
+        "ITSAppUsesNonExemptEncryption": false,
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": [
+              "com.googleusercontent.apps.94126503648-htsubrfo04f7ef34ig58lsiscj9kbmo6"
+            ]
+          }
+        ]
       }
     },
     "android": {
