feat: update android release status to completed in eas.json

--- a/eas.json
+++ b/eas.json
@@ -71,7 +71,7 @@
   "submit": {
     "preview": {
       "android": {
-        "releaseStatus": "draft"
+        "releaseStatus": "completed"
       },
       "ios": {
         "ascAppId": "6754565256"
