--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "verse-mate-mobile",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -26,6 +26,7 @@
     "capture:page": "bun run scripts/visual-reference/capture-page.ts",
     "capture:journey": "bun run scripts/visual-reference/capture-journey-replay.ts",
     "generate:api": "npx @hey-api/openapi-ts",
+    "diagnose:google-sso": "bun run scripts/diagnose-google-sso.ts",
     "prepare": "husky",
     "validate": "bun run lint && bun run type-check && bun run test"
   },
