feat(offline): Implement SQLite manager for offline storage of Bible verses, commentaries, and topics
- Added `sqlite-manager.ts` for database initialization, CRUD operations, and data management.
- Created tables for offline verses, commentaries, topics, and metadata.
- Implemented functions for inserting, retrieving, and deleting Bible verses and commentaries.
- Added functionality to handle offline topic data and references.

feat(offline): Add topic renderer service for parsing and injecting Bible verses

- Introduced `topic-renderer.service.ts` to parse topic content and replace verse placeholders with actual verses from the local database.
- Implemented normalization of book names and reference summary generation for markdown sections.

feat(offline): Define types for offline data management

- Created `types.ts` to define interfaces for Bible verses, commentaries, topics, and metadata.
- Included types for download status and sync progress.

feat(api): Enhance hooks for offline support in Bible and topic retrieval

- Updated `hooks.ts` to support offline mode for fetching Bible chapters, commentaries, topics, and their explanations.
- Integrated local data fetching logic and verse placeholder replacement in hooks for topics and explanations.

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "expo-sensors": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.12",
+    "expo-sqlite": "~16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
@@ -126,7 +127,7 @@
   "bun": {
     "test": {
       "preload": "./test-setup.ts",
-      "timeout": 10000
+      "timeout": 1e4
     }
   },
   "private": true
