--- a/app.json
+++ b/app.json
@@ -108,7 +108,8 @@
       "@react-native-google-signin/google-signin",
       "expo-font",
       "expo-localization",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true,
