--- a/.maestro/topics-reading-flow.yaml
+++ b/.maestro/topics-reading-flow.yaml
@@ -1,5 +1,5 @@
 ---
-appId: org.versemate.mobile
+appId: org.versemate.app
 name: Topics Reading Flow
 description: Tests topics navigation and selection functionality
 tags:
@@ -21,7 +21,7 @@ tags:
 # ============================================
 
 - launchApp:
-    appId: org.versemate.mobile
+    appId: org.versemate.app
 
 # For development builds: dismiss dev menu if shown
 - tapOn:
