--- a/.maestro/auth-flow.yaml
+++ b/.maestro/auth-flow.yaml
@@ -1,5 +1,5 @@
 ---
-appId: org.versemate.mobile
+appId: org.versemate.app
 name: Authentication Flow
 description: Tests authentication UI navigation including signup and login screens
 tags:
@@ -24,7 +24,7 @@ tags:
 # ============================================
 
 - launchApp:
-    appId: org.versemate.mobile
+    appId: org.versemate.app
 
 # For development builds: dismiss dev menu if shown
 - tapOn:
