--- a/.maestro/highlights-flow.yaml
+++ b/.maestro/highlights-flow.yaml
@@ -1,5 +1,5 @@
 ---
-appId: org.versemate.mobile
+appId: org.versemate.app
 name: Highlights Feature Flow (Unauthenticated)
 description: Tests highlights feature navigation for unauthenticated users
 tags:
@@ -22,7 +22,7 @@ tags:
 # ============================================
 
 - launchApp:
-    appId: org.versemate.mobile
+    appId: org.versemate.app
 
 # For development builds: dismiss dev menu if shown
 - tapOn:
