--- a/.maestro/deep-link-header-test.yaml
+++ b/.maestro/deep-link-header-test.yaml
@@ -1,5 +1,5 @@
 ---
-appId: org.versemate.mobile
+appId: org.versemate.app
 name: Deep Link Header Test
 description: Tests header sync with deep link navigation (direct URL navigation)
 tags:
@@ -41,7 +41,7 @@ tags:
 # ============================================
 
 - launchApp:
-    appId: org.versemate.mobile
+    appId: org.versemate.app
 
 # For development builds: dismiss dev menu if shown
 - tapOn:
