--- a/.maestro/combined-interactions-test.yaml
+++ b/.maestro/combined-interactions-test.yaml
@@ -1,5 +1,5 @@
 ---
-appId: org.versemate.mobile
+appId: org.versemate.app
 name: Combined Interactions Test
 description: Tests header sync through combined navigation patterns (modal + swipe + deep link)
 tags:
@@ -37,7 +37,7 @@ tags:
 # ============================================
 
 - launchApp:
-    appId: org.versemate.mobile
+    appId: org.versemate.app
 
 # For development builds: dismiss dev menu if shown
 - tapOn:
