fix(e2e): add config section to shared setup flow
Maestro requires all flow files (including subflows referenced via
runFlow) to have an appId config section with --- separator.

--- a/.maestro/shared/setup.yaml
+++ b/.maestro/shared/setup.yaml
@@ -1,3 +1,5 @@
+appId: org.versemate.app
+---
 # Shared app setup: launch with clean state, skip onboarding, wait for Bible screen.
 # Usage from any test subfolder: - runFlow: ../shared/setup.yaml
 
