fix(e2e): add Pixel 6 profile to phone emulator
The default AVD created by android-emulator-runner uses a 320x640
screen at 160 dpi, which is too small for the app to render properly.
All 4 navigation tests fail because UI elements are not visible at
that resolution. Adding profile: pixel_6 gives a realistic phone
screen size (1080x2400).

--- a/.github/workflows/maestro-e2e.yml
+++ b/.github/workflows/maestro-e2e.yml
@@ -117,6 +117,7 @@ jobs:
           api-level: 34
           target: google_apis
           arch: x86_64
+          profile: pixel_6
           force-avd-creation: true
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim
           disable-animations: true
@@ -183,7 +184,7 @@ jobs:
           |----------|-------|
           | **Test Target** | $TEST_TARGET |
           | **Android API Level** | 34 |
-          | **Phone Emulator** | Default (x86_64, google_apis) |
+          | **Phone Emulator** | Pixel 6 (x86_64, google_apis) |
           | **Tablet Emulator** | Nexus 10 (2560x1600) |
           | **APK Source** | $APK_SOURCE |
           | **Fingerprint Hash** | \`$FINGERPRINT_HASH\` |
