feat(api): update type exports and improve import organization for clarity

--- a/biome.json
+++ b/biome.json
@@ -8,6 +8,7 @@
       "constants/**/*.{js,jsx,ts,tsx}",
       "utils/**/*.{js,jsx,ts,tsx}",
       "src/**/*.{js,jsx,ts,tsx}",
+      "!src/api/generated/**",
       "services/**/*.{js,jsx,ts,tsx}",
       "types/**/*.{js,jsx,ts,tsx}",
       "scripts/**/*.{js,jsx,ts,tsx}",
