feat: improve dependency management and code clarity across multiple files

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "format": "biome format --write app components hooks constants utils types scripts __tests__",
-    "lint": "biome check app components hooks constants utils types scripts __tests__ && eslint .",
-    "lint:fix": "biome check --write app components hooks constants utils types scripts __tests__ && eslint --fix .",
+    "format": "biome format --write app components hooks constants utils types scripts __tests__ src services",
+    "lint": "biome check app components hooks constants utils types scripts __tests__ src services && eslint .",
+    "lint:fix": "biome check --write app components hooks constants utils types scripts __tests__ src services && eslint --fix .",
     "type-check": "tsc --noEmit",
     "test": "cross-env EXPO_USE_STATIC_RENDERING=1 jest",
     "test:watch": "cross-env EXPO_USE_STATIC_RENDERING=1 jest --watch",
